# TrueHumanAtlas

./: .zenodo.json  CITATION.cff  LICENSE_CODE.md  LICENSE_DATA.md  README.md  compute_umap.py  index.html  pyproject.toml
compute/: index.html
data/: atlas_fused.json  atlas_umap.json  true_human_atlas.json  wings_database.json
data/binary_transcriptome/: h9_base4.json  h9_denovo.json  h9_frame.json  h9_splice_history.json  hepg2_base4.json  hepg2_denovo.json  hepg2_frame.json  hepg2_splice_history.json  k562_base4.json  k562_denovo.json  k562_frame.json  k562_illumina_base4.json  k562_illumina_frame.json  k562_splice_history.json
data/coupling_tensor/: aberrant_junction_catalog.json  korean_nsclc_tensor.json  structural_atlas_results.json  structural_isoform_analysis.json  wi38_fetal_fibroblast_base4.json  wi38_fetal_fibroblast_frame.json
data/cross_kingdom/: cross_kingdom_tensor.json  hongyan_atlas_v02.json  mycelium_atlas_v02.json  population_tensor.json
globe/: index.html  morphglobe.html
legacy_tools/: coupling_tensor.py  splice_denovo.py  staff_aberrant_splicing.py  staff_base4.py  staff_binary_transcripter.py  staff_reading_frame.py  staff_splice_history.py  viral_marker_scan.py
staff/: __init__.py  adapters.py  cli.py  detect.py  food.py  ingest.py  manifold.py  view.py
staff/atlas/: __init__.py  db.py  query.py
staff/bam/: __init__.py  base4.py  binary_transcripter.py  reading_frame.py  splice_denovo.py  splice_history.py  stream.py
staff/expr/: __init__.py  coupling_tensor.py
staff/scan/: __init__.py  correlate.py  panel.py  scanner.py
